# ArrowSchema

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
example/: example.py  example.schema.json
src/arrowschema/: PyarrowBinder.py  PyarrowField.py  PyarrowSchema.py  PyarrowType.py  __init__.py  literal.py  literals.py  model.py
test/: test_pyarrow_field.py  test_pyarrow_schema.py  test_pyarrow_type.py
