[project]
name = "arrowschema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thommodin", email = "thomas.galindo@utas.edu.au" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
arrowschema = "arrowschema:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
