[project]
name = "arrowschema"
version = "0.1.0"
description = "Interface module to handle pyarrow schemas in a not so annoying way."
readme = "README.md"
authors = [
    { name = "thommodin", email = "thomas.galindo@utas.edu.au" }
]
requires-python = ">=3.13"
dependencies = [
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "pytest>=8.4.2",
]

[project.scripts]
arrowschema = "arrowschema:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
